examples/test/testpolicy8867.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8867
  namespace: namespace416
spec:
  podSelector:
    matchLabels:
      key13: value19
      key26: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value4
          key0: value26
      podSelector:
        matchLabels:
          key46: value8
          key0: value36
